assets/articles/technology/article-demo/v2/render.md
# Ray 是怎么把一次函数调用，变成跨机器的协作的？

> 从 Driver 到 Worker，看清一次 `.remote()` 背后任务与数据的流动
>
> 原文 v2（按团队技术写作规范重写，配图重新生成）

![](images/hero.png)

*图：一行 `@ray.remote`，单机函数就跑遍整个集群*


你写了一个普普通通的单机 Python 函数，给它加一行 `@ray.remote`，它就能跑在集群里几十上百台机器上——你不用管任务分到哪台机器、数据怎么在节点间搬运、算完谁来回收内存。

这中间到底发生了什么？

Ray 之所以能做到"单机代码，分布式执行"，靠的是一套精心设计的**任务调度**和**对象流动**机制。本文不堆 API，也不罗列组件清单，而是用一连串图，带你把这套机制**看**清楚——读完，你应该能自己在脑子里推演：一次 `.remote()` 调用发出后，任务和数据是怎么在集群里流动、又是怎么被回收的。

我们分三步搭建这个认知，每一步都是下一步的前置：

1. **一个节点里有什么** —— 先解剖单个 Ray 节点的组件
2. **整个集群怎么拼起来** —— 再看多节点如何协同
3. **一次调用怎么流动** —— 最后跟着一个具体例子，走完任务与对象的完整生命周期

---

## 第一步：为什么需要 Ray？

先看它解决的问题。

把单机程序改成分布式，通常要自己操心一堆事：任务派给哪台机器、机器间怎么传数据、某个结果谁还在用、用完谁来释放。这些"分布式脏活"和你的业务逻辑毫无关系，却能吃掉大部分开发时间。

Ray 由加州大学伯克利分校 RISE 实验室开发，它的目标就一句话：**让你按单机模型写代码，由它自动扩展到多节点执行**。你只管声明"这个函数可以远程跑"，剩下的调度、传输、回收，全部交给 Ray 的底层架构。

要理解它怎么做到，得先认识几个最基本的概念——它们是后面所有内容的积木。

**先约定五个词**（后面反复出现）：

- **任务（Task）**：一次远程函数调用。用 `.remote()` 发起，**立即返回**一个 `ObjectRef`（未来对象的"提货单"），而不是阻塞等结果。任务分无状态（普通函数）和有状态（Actor 方法）。
- **对象（Object）**：任务的返回值，或用 `ray.put()` 显式放进去的值。对象一旦创建**不可变**，靠 `ObjectRef` 引用和传递。
- **执行器（Actor）**：有状态的工作进程，即 `@ray.remote` 类的实例，内部状态可持续读写。
- **驱动程序（Driver）**：你的程序入口，调用 `ray.init()` 并发起任务。它本质上也是一个特殊的工作进程。
- **作业（Job）**：同一个 Driver 发起的所有任务、对象、Actor 的集合，与 Driver 一一对应。

![](images/concepts.png)

*图：Ray 的五个核心概念 —— Task / Object / Actor / Driver / Job*

---

## 第二步：一个 Ray 节点里有什么？

把镜头拉近到**单个节点**。集群再大，也是这样一个个节点拼出来的，所以先看清一个节点的解剖结构。

![](images/node-anatomy.png)

*图：单个 Ray 节点的组件解剖 —— Worker 干活、Raylet 调度与存大对象、GCS 管全局*

一个 Ray 节点里，有这么几个角色：

- **Worker（工作进程）**：真正干活的地方，负责提交和执行任务。分无状态（能跑任意远程函数）和有状态（Actor）。默认按 CPU 核数预启动一批。每个 Worker 还各自维护两样东西：
  - **所有权表（Ownership Table）**：记录"我引用了哪些对象"，包括引用计数和对象位置。它是后面对象能否被回收的关键。
  - **进程内存储（In-process Store）**：存放**小对象**，读写最快。
- **Raylet**：节点的"大管家"，一个节点一个，管两件事：
  - **调度器（Scheduler）**：负责本地资源调度与任务分发。集群里所有节点的调度器合起来，就是 Ray 的分布式调度系统。
  - **对象存储（Object Store，又名 Plasma）**：存放**大对象**，支持跨节点传输、内存溢出落盘、多节点共享。
- **GCS（全局控制服务）**：只在**头节点（head node）**上有一个，保存集群级元数据——Actor 位置、资源分组等，支持读缓存、写同步和高可用。
- **Driver 进程**：一般在头节点，负责启动程序、提交任务，但**自己不执行任务**。

一句话记住这张图的分工：**Worker 干活、Raylet 调度和存大对象、GCS 管全局、Driver 发号施令。**

---

## 第三步：内存都花在哪？

分布式系统里，"数据放哪、谁占内存"往往比"算得多快"更能决定稳定性。Ray 把内存分成四类，理解它们能帮你后面看懂"对象为什么要跨节点复制、又为什么能被回收"。

![](images/memory.png)

*图：Ray 的四类内存 —— 大对象走共享存储，小对象走进程内存*

1. **任务/Actor 执行的堆内存**：跑用户代码本身要的内存。占用过高时，Ray 会优先杀掉高占用进程以自保。
2. **大对象的共享内存**：`ray.put()` 或任务返回的大对象，写进共享内存对象存储，支持跨进程、跨节点访问，具备故障恢复、溢出回收和引用计数控制。
3. **小对象的进程内存**：小于阈值（默认 100KB）的对象直接存本地进程内存，读写更快。
4. **系统元数据内存**：任务描述、对象引用等系统开销。Ray v2.0 起，每个 `ObjectRef` 大约几 KB。

这里藏着一个贯穿全文的设计取舍：**大对象走共享存储（省拷贝、可跨节点），小对象走进程内存（图快）。** 后面的消息流动里，你会看到大对象 X 和小对象 Y 走的正是两条不同的路。

---

## 第四步：整个集群怎么协同？

有了单节点的解剖，把多个节点拼起来就是集群的全景：多个对等的工作节点，加上唯一持有 GCS 的头节点。

![](images/cluster.png)

*图：Ray 集群全景 —— 本地自治 + 全局协调，GCS 仅在头节点*

它们怎么配合？

- 每个节点都有自己的 Raylet（调度器 + 对象存储）和一批 Worker，**本地能调度的就本地调度**。
- 需要跨节点时（任务分到别的节点、大对象要搬过去），节点间的调度器互相通信、对象存储互相传数据。
- 全局信息（谁在哪、Actor 在哪个节点）统一问头节点的 GCS。

这套"本地自治 + 全局协调"的设计，让 Ray 既能快速本地决策，又能在需要时跨节点协作——接下来我们就跟着一个具体例子，看这套机制真正跑起来是什么样。

---

## 第五步：一次调用，到底怎么流动？

前面都是静态结构，现在让它动起来。看一段最小的代码：

```python
@ray.remote
def A():
    y_id = C.remote(B.remote())
    y = ray.get(y_id)
```

约定这个场景（后面五个阶段都基于它）：

- 任务 A 提交了任务 B 和任务 C，**C 依赖 B 的输出**。
- 任务 B 返回一个**大对象 X**，任务 C 返回一个**小对象 Y**。
- A、B、C 分别在**不同节点**上执行。

记住我们的目标不是背下每一步，而是建立一个直觉：**任务往哪走、数据往哪搬、谁在记账、谁来回收。** 五个阶段，每张图只推进一步。

### 阶段一：把任务 B 调度出去

Worker 1 正在执行 A，B 和 C 已经提交到 Worker 1，所以它的所有权表里已经有 X 和 Y 的条目（还没值）。

1. Worker 1（执行 A）向本地调度器申请执行 B；
2. 本地调度器把任务转发到节点 2；
3. Worker 1 更新所有权表，标记 B 将在节点 2 执行；
4. Worker 1 请求节点 2 的调度器调度 B；
5. 节点 2 分配资源，指定 Worker 2 执行；
6. Worker 1 把 B 提交给 Worker 2。

![](images/stage1.png)

*图：阶段一 —— 把任务 B 调度到节点 2（谁发起，谁记账）*

**记账的是发起方**：注意从头到尾，是 Worker 1 在维护"B、X 在哪"的所有权信息——这是 Ray 的一个核心设计：**谁发起任务，谁负责记账。**

### 阶段二：执行 B，产出大对象 X

1. Worker 2 执行 B，生成大对象 X；
2. 因为 X 大，它被写进**节点 2 的共享对象存储**；节点 2 异步更新对象表，登记"X 在节点 2"；
3. 作为 X 的第一个副本，节点 2 会**固定（pin）**它，直到发起方通知可以释放——保证只要还有人引用，X 就一直可达；
4. Worker 2 通知 Worker 1：B 完成；Worker 1 更新所有权表，标记 X 可用；
5. Worker 1 释放调度资源，Worker 2 可以去干别的了。

![](images/stage2.png)

*图：阶段二 —— 执行 B，大对象 X 留在节点 2 的对象存储并登记位置*

大对象 X 没有"传回"给发起方，而是**留在原地、只登记位置**——这正是共享对象存储的价值：等真正有人要用时再搬。

### 阶段三：调度 C，并把 X 搬过去

C 依赖 X，但 C 要在节点 3 执行，而 X 在节点 2。于是先调度、再取数据。

1. Worker 1 请求执行 C，调度器把任务转发到节点 3；
2. 节点 3 调度器发现缺依赖 X，向对象表查它的位置；
3. 对象表回复"X 在节点 2"；
4. 节点 3 的对象存储向节点 2 请求 X 的副本，X 从节点 2 复制到节点 3；
5. 节点 3 缓存这份 X 副本（但**不固定**）——本地在用就不会被逐出，可一旦内存吃紧，它可能按 LRU 被淘汰；真需要时再从节点 2 重新拉。

![](images/stage3.png)

*图：阶段三 —— 调度 C 到节点 3，X 从节点 2 复制过去（原件固定，缓存可淘汰）*

对比两份 X 副本的待遇：**原产地（节点 2）的副本被固定，异地缓存（节点 3）的副本可被淘汰。** 这就是前面"引用计数 + 位置登记"设计在起作用——系统始终知道 X 有几份、在哪、谁能删。

### 阶段四：执行 C，返回小对象 Y

1. Worker 1 把 C 发到 Worker 3 执行；
2. Worker 3 从共享内存拿到 X，运行 `C(X)`；
3. C 返回**小对象 Y**——注意这次是**按值直接返回**，而不是塞进对象存储；
4. Worker 1 把 Y 存进**自己的进程内存储**；此时 A 里那个还在等的 `ray.get` 就能从 Worker 1 的进程内存里拿到 Y 了；
5. Worker 1 把资源还给节点 3 的调度器，Worker 3 可复用。

![](images/stage4.png)

*图：阶段四 —— 执行 C(X)，小对象 Y 按值返回发起方的进程内存*

**大对象 X 和小对象 Y 走了两条路**：X 留在共享对象存储、按需跨节点搬运；Y 小，直接按值返回、进发起方的进程内存。这正呼应了第三步那条设计取舍。

### 阶段五：垃圾回收

1. 任务都完成后，Worker 1 删掉对 X 的引用——这是安全的，因为唯一还引用 X 的任务 C 已经结束；
2. Worker 1 保留 Y 的条目，因为应用还持有 Y 的 `ObjectRef`；
3. 最终，X 的所有副本会从集群中清除。

![](images/stage5.png)

*图：阶段五 —— 引用清零，X 的所有副本被安全回收*

**回收的依据始终是所有权表里的引用计数**：只要没人再引用 X，它的每一份副本（包括节点 2 的原件和节点 3 的缓存）都能被安全删除。整条链路——调度、传输、缓存、回收——都由"谁发起谁记账 + 对象表登记位置"这套账本驱动。

---

## 回头看：三个贯穿始终的设计

走完五个阶段，回头看，会发现整套机制其实由三条一致的原则驱动：

- **谁发起，谁记账**：任务的发起方（Worker 1）始终维护所有权表，负责追踪它派出去的任务和对象在哪、还有没有人用。
- **大对象登记位置、按需搬运；小对象直接按值传**：省掉不必要的拷贝，又保证跨节点可达。
- **引用计数驱动回收**：对象活多久，只看还有没有人引用它，与它在哪、有几份副本无关。

理解了这三条，你就不用死记五个阶段的每一步——遇到任何 Ray 的调度或内存问题，都能顺着"任务往哪走、数据往哪搬、谁在记账"这条线自己推演出来。

---

## 参考文献

[1] Ray v2 Architecture: <https://docs.google.com/document/d/1tBw9A4j62ruI5omIJbMxly-la5w4q_TjyJgJL_jN2fI/preview>
