assets/articles/technology/article-demo/v3/render.md
# Ray 是怎么把一次函数调用，变成跨机器的协作的？

> 从 Driver 到 Worker，看清一次 `.remote()` 背后任务与数据的流动
>
> 原文 v3（按团队技术写作规范重写：**病→药→效→托** 骨架 + 补上"效"与"托"；配图改用"技术蓝墨"配色）

![](images/hero.png)

*图：一行 `@ray.remote`，单机函数就跑遍整个集群*

你有一份在笔记本上跑得好好的 Python 训练脚本。老板说："上 100 台机器。"

于是你打开编辑器，却发现接下来要写的代码，几乎没一行和你的模型有关：这个任务派给哪台机器？中间结果几百兆，怎么在机器间搬？算完了谁还在用它、谁负责把内存释放掉？——这些"分布式脏活"能吃掉你大半的时间，而它们和"训练一个模型"这件事毫无关系。

Ray 想把这半天时间还给你。你给那个单机函数加一行 `@ray.remote`，它就能跑在集群里几十上百台机器上——派活、搬数据、回收内存，全不用你管。

**这中间到底发生了什么？** 这一个问题，是本文要回答的全部。Ray 能做到"单机代码、分布式执行"，靠的是一套精心设计的**任务调度**和**对象流动**机制。本文不堆 API、也不罗列组件清单，而是用一连串图，带你把这套机制**看**清楚——读完，你应该能在脑子里自己推演：一次 `.remote()` 发出后，任务和数据怎么在集群里流动、又怎么被回收。

我们分三段搭这个认知，每一段都是下一段的前置：

1. **一个节点里有什么** —— 先解剖单个 Ray 节点的组件
2. **整个集群怎么拼起来** —— 再看多节点如何协同
3. **一次调用怎么流动** —— 最后跟着一个具体例子，走完任务与对象的完整生命周期

---

## 一、先约定五个词

要看懂后面的流动，得先认识几个最基本的概念——它们是后面所有内容的积木。

- **任务（Task）**：一次远程函数调用。用 `.remote()` 发起，**立即返回**一个 `ObjectRef`（未来对象的"提货单"），而不是阻塞等结果。任务分无状态（普通函数）和有状态（Actor 方法）。
- **对象（Object）**：任务的返回值，或用 `ray.put()` 显式放进去的值。对象一旦创建**不可变**，靠 `ObjectRef` 引用和传递。
- **执行器（Actor）**：有状态的工作进程，即 `@ray.remote` 类的实例，内部状态可持续读写。
- **驱动程序（Driver）**：你的程序入口，调用 `ray.init()` 并发起任务。它本质上也是一个特殊的工作进程。
- **作业（Job）**：同一个 Driver 发起的所有任务、对象、Actor 的集合，与 Driver 一一对应。

![](images/concepts.png)

*图：Ray 的五个核心概念 —— Task / Object / Actor / Driver / Job*

记住那张"提货单"（`ObjectRef`）的比喻，后面整篇都在讲：提货单怎么发、货怎么在集群里流转、货没人要了怎么销毁。

---

## 二、一个 Ray 节点里有什么？

集群再大，也是一个个节点拼出来的——所以先把镜头怼到**单个节点**上。

![](images/node-anatomy.png)

*图：单个 Ray 节点的组件解剖 —— Worker 干活、Raylet 调度与存大对象、GCS 管全局*

一个 Ray 节点里，有这么几个角色：

- **Worker（工作进程）**：真正干活的地方，负责提交和执行任务。分无状态（能跑任意远程函数）和有状态（Actor）。默认按 CPU 核数预启动一批。每个 Worker 还各自维护两样东西：
  - **所有权表（Ownership Table）**：记录"我引用了哪些对象"，包括引用计数和对象位置。它是后面对象能否被回收的关键。
  - **进程内存储（In-process Store）**：存放**小对象**，读写最快。
- **Raylet**：节点的"大管家"，一个节点一个，管两件事：
  - **调度器（Scheduler）**：负责本地资源调度与任务分发。集群里所有节点的调度器合起来，就是 Ray 的分布式调度系统。
  - **对象存储（Object Store，又名 Plasma）**：存放**大对象**，支持跨节点传输、内存溢出落盘、多节点共享。
- **GCS（全局控制服务）**：只在**头节点（head node）**上有一个，保存集群级元数据——Actor 位置、资源分组等，支持读缓存、写同步和高可用。
- **Driver 进程**：一般在头节点，负责启动程序、提交任务，但**自己不执行任务**。

一句话记住这张图的分工：**Worker 干活、Raylet 调度和存大对象、GCS 管全局、Driver 发号施令。**

---

## 三、内存都花在哪？

分布式系统里，"数据放哪、谁占内存"往往比"算得多快"更能决定稳定性。

Ray 把内存分成四类，理解它们，你才能看懂后面"对象为什么要跨节点复制、又为什么能被回收"。

![](images/memory.png)

*图：Ray 的四类内存 —— 大对象走共享存储，小对象走进程内存*

1. **任务/Actor 执行的堆内存**：跑用户代码本身要的内存。占用过高时，Ray 会优先杀掉高占用进程以自保。
2. **大对象的共享内存**：`ray.put()` 或任务返回的大对象，写进共享内存对象存储，支持跨进程、跨节点访问，具备故障恢复、溢出回收和引用计数控制。
3. **小对象的进程内存**：小于阈值（默认 100KB）的对象直接存本地进程内存，读写更快。
4. **系统元数据内存**：任务描述、对象引用等系统开销。Ray v2.0 起，每个 `ObjectRef` 大约几 KB。

这里藏着一个贯穿全文的设计取舍：**大对象走共享存储（省拷贝、可跨节点），小对象走进程内存（图快）。** 后面的消息流动里，你会看到大对象 X 和小对象 Y 走的正是两条不同的路。

---

## 四、整个集群怎么协同？

有了单节点的解剖，把多个节点拼起来，就是集群的全景：多个对等的工作节点，加上唯一持有 GCS 的头节点。

![](images/cluster.png)

*图：Ray 集群全景 —— 本地自治 + 全局协调，GCS 仅在头节点*

它们怎么配合？

- 每个节点都有自己的 Raylet（调度器 + 对象存储）和一批 Worker，**本地能调度的就本地调度**。
- 需要跨节点时（任务分到别的节点、大对象要搬过去），节点间的调度器互相通信、对象存储互相传数据。
- 全局信息（谁在哪、Actor 在哪个节点）统一问头节点的 GCS。

这套"本地自治 + 全局协调"的设计，让 Ray 既能快速本地决策，又能在需要时跨节点协作——接下来我们就跟着一个具体例子，看它真正跑起来是什么样。

---

## 五、一次调用，到底怎么流动？

前面都是静态结构，现在让它动起来。看一段最小的代码：

```python
@ray.remote
def A():
    y_id = C.remote(B.remote())
    y = ray.get(y_id)
```

约定这个场景（后面五个阶段都基于它）：

- 任务 A 提交了任务 B 和任务 C，**C 依赖 B 的输出**。
- 任务 B 返回一个**大对象 X**，任务 C 返回一个**小对象 Y**。
- A、B、C 分别在**不同节点**上执行。

我们的目标不是背下每一步，而是建立一个直觉：**任务往哪走、数据往哪搬、谁在记账、谁来回收。** 五个阶段，每张图只推进一步。

### 阶段一：把任务 B 调度出去

Worker 1 正在执行 A，B 和 C 已经提交到 Worker 1，所以它的所有权表里已经有 X 和 Y 的条目（还没值）。

1. Worker 1（执行 A）向本地调度器申请执行 B；
2. 本地调度器把任务转发到节点 2；
3. Worker 1 更新所有权表，标记 B 将在节点 2 执行；
4. Worker 1 请求节点 2 的调度器调度 B；
5. 节点 2 分配资源，指定 Worker 2 执行；
6. Worker 1 把 B 提交给 Worker 2。

![](images/stage1.png)

*图：阶段一 —— 把任务 B 调度到节点 2（谁发起，谁记账）*

**记账的是发起方**：注意从头到尾，是 Worker 1 在维护"B、X 在哪"的所有权信息——这是 Ray 的一个核心设计：**谁发起任务，谁负责记账。**

### 阶段二：执行 B，产出大对象 X

1. Worker 2 执行 B，生成大对象 X；
2. 因为 X 大，它被写进**节点 2 的共享对象存储**；节点 2 异步更新对象表，登记"X 在节点 2"；
3. 作为 X 的第一个副本，节点 2 会**固定（pin）**它，直到发起方通知可以释放——保证只要还有人引用，X 就一直可达；
4. Worker 2 通知 Worker 1：B 完成；Worker 1 更新所有权表，标记 X 可用；
5. Worker 1 释放调度资源，Worker 2 可以去干别的了。

![](images/stage2.png)

*图：阶段二 —— 执行 B，大对象 X 留在节点 2 的对象存储并登记位置*

大对象 X 没有"传回"给发起方，而是**留在原地、只登记位置**——这正是共享对象存储的价值：等真正有人要用时再搬。

### 阶段三：调度 C，并把 X 搬过去

C 依赖 X，但 C 要在节点 3 执行，而 X 在节点 2。于是先调度、再取数据。

1. Worker 1 请求执行 C，调度器把任务转发到节点 3；
2. 节点 3 调度器发现缺依赖 X，向对象表查它的位置；
3. 对象表回复"X 在节点 2"；
4. 节点 3 的对象存储向节点 2 请求 X 的副本，X 从节点 2 复制到节点 3；
5. 节点 3 缓存这份 X 副本（但**不固定**）——本地在用就不会被逐出，可一旦内存吃紧，它可能按 LRU 被淘汰；真需要时再从节点 2 重新拉。

![](images/stage3.png)

*图：阶段三 —— 调度 C 到节点 3，X 从节点 2 复制过去（原件固定，缓存可淘汰）*

对比两份 X 副本的待遇：**原产地（节点 2）的副本被固定，异地缓存（节点 3）的副本可被淘汰。** 这就是前面"引用计数 + 位置登记"设计在起作用——系统始终知道 X 有几份、在哪、谁能删。

### 阶段四：执行 C，返回小对象 Y

1. Worker 1 把 C 发到 Worker 3 执行；
2. Worker 3 从共享内存拿到 X，运行 `C(X)`；
3. C 返回**小对象 Y**——注意这次是**按值直接返回**，而不是塞进对象存储；
4. Worker 1 把 Y 存进**自己的进程内存储**；此时 A 里那个还在等的 `ray.get` 就能从 Worker 1 的进程内存里拿到 Y 了；
5. Worker 1 把资源还给节点 3 的调度器，Worker 3 可复用。

![](images/stage4.png)

*图：阶段四 —— 执行 C(X)，小对象 Y 按值返回发起方的进程内存*

**大对象 X 和小对象 Y 走了两条路**：X 留在共享对象存储、按需跨节点搬运；Y 小，直接按值返回、进发起方的进程内存。这正呼应了第三节那条设计取舍。

### 阶段五：垃圾回收

1. 任务都完成后，Worker 1 删掉对 X 的引用——这是安全的，因为唯一还引用 X 的任务 C 已经结束；
2. Worker 1 保留 Y 的条目，因为应用还持有 Y 的 `ObjectRef`；
3. 最终，X 的所有副本会从集群中清除。

![](images/stage5.png)

*图：阶段五 —— 引用清零，X 的所有副本被安全回收；小对象 Y 仍在发起方进程内存里*

**回收的依据始终是所有权表里的引用计数**：只要没人再引用 X，它的每一份副本（包括节点 2 的原件和节点 3 的缓存）都能被安全删除。整条链路——调度、传输、缓存、回收——都由"谁发起谁记账 + 对象表登记位置"这套账本驱动。

---

## 六、这样绕一大圈，到底省下了什么？

走完五个阶段你可能会问：为了跑一个 `C(B())`，Ray 记账、登记、固定、缓存、回收忙活这么多，值吗？值。把它和"最朴素的实现"比一下，三处设计各自省下了实打实的成本。

- **大对象登记位置、按需搬运——省掉一次全量拷贝。**
  最朴素的做法是：B 算出大对象 X，先回传给发起方，发起方再转发给需要它的 C。X 若有几百兆，这就是**两次**全网传输。Ray 的做法是 X 留在原地、只把"X 在节点 2"这条几十字节的位置登记出去，等 C 真正落在节点 3 才直传一次。数据搬运从"两次大拷贝"降到"一次按需拷贝 + 一条元数据"。
- **小对象走进程内存——省掉序列化和共享内存的开销。**
  Y 只有几十字节，却走对象存储的话，要经历序列化、写共享内存、登记、跨进程读取一整套。Ray 让它**按值直接返回**发起方进程内存，`ray.get` 是一次本地内存读取，微秒级。大对象图省拷贝、小对象图快，两条路各得其所。
- **谁发起谁记账（去中心化 ownership）——让元数据不成为瓶颈。**
  如果有一个中央服务记录"每个对象在哪、还有谁引用"，那么每提交一个任务、每传递一个引用都要去问它，规模一上来它就是瓶颈和单点。Ray 把这份账**分散**到每个发起方自己的所有权表里，GCS 只保留 Actor 位置这类集群级元数据。这正是 Ray 能把同一套 API 从一台机器扩到上千节点的关键——账本是分布式的，没有一个中心在每次对象操作时被撞。

一句话：**它多记的这些账，都是为了在扩大规模时少搬数据、少撞中心。** 这不是过度设计，而是"让单机 API 在集群上仍然划算"的必要代价。

---

## 七、谁在用，你怎么验证，它的边界在哪

光讲原理还不够，给你三样可以自己去核实的东西。

**真实在用。** 据 Ray 官方与 Anyscale 公开的用户案例，OpenAI、Uber、蚂蚁集团、字节跳动、Shopify、Spotify 等都在生产环境用 Ray 编排大规模计算——尤其是大模型训练、强化学习和在线特征处理。上面讲的这套对象流动机制，就是支撑这些负载的底盘（案例见 ray.io / Anyscale 官网）。

**自己能跑。** 前面那段 `A/B/C` 不是伪代码。装好 Ray（`pip install ray`）后，下面这段可以直接在本机跑起来，用 `ray timeline` 或 dashboard 就能看到任务真的分到了不同 Worker：

```python
import ray
ray.init()

@ray.remote
def B():
    return "x" * (10 * 1024 * 1024)  # 一个"大"对象

@ray.remote
def C(x):
    return len(x)                    # 一个"小"对象

y_ref = C.remote(B.remote())         # 立即返回 ObjectRef，不阻塞
print(ray.get(y_ref))                # 10485760
```

单机上它就在多个进程间跑；换成集群，同一段代码一行不改就分到多台机器——这正是全文那个设问的答案。

**边界也要说清。** 这套设计不是没有代价，用之前你该知道它在哪儿会退化：

- **发起方（owner）是对象可用性的单点**：谁发起谁记账的反面是——发起方进程一旦崩溃，它名下对象的元数据就没了。Ray 靠 lineage（血缘）重建来兜底，但重建有代价、且并非所有情况都能重建。
- **100KB 的大小阈值是经验值**：卡在大小对象之间的中等对象、或海量小对象的场景，未必落在最优路径上。
- **缓存副本会被 LRU 淘汰**：内存吃紧时，异地缓存的 X 被逐出，下次用要重新拉，带来延迟抖动。
- **对象存储满了会落盘（spilling）**：落盘对象的访问明显变慢，大对象密集的作业要留意对象存储容量。

把这些边界摆出来，不是给 Ray 挑刺，而是让你知道：**它的"省"都发生在"数据大、规模大、发起方稳定"的前提下。** 前提不成立时，收益会打折。

---

## 八、回头看：三条能迁移的设计直觉

走完全程，回头看，整套机制其实由三条一致的原则驱动——记住这三条，比记住五个阶段的每一步有用得多：

- **谁发起，谁记账**：任务的发起方始终维护所有权表，追踪它派出去的任务和对象在哪、还有没有人用。（去中心化，才扩得动。）
- **大对象登记位置、按需搬运；小对象直接按值传**：省掉不必要的拷贝，又保证跨节点可达。（按大小分流，各得其所。）
- **引用计数驱动回收**：对象活多久，只看还有没有人引用它，与它在哪、有几份副本无关。（账本一套，管到底。）

这三条不只属于 Ray。任何要把"单机编程模型"扩到分布式的系统，都要回答同样三个问题：**账记在哪、数据怎么分流、什么时候能回收。** 理解了 Ray 的答案，你再看别的分布式框架，就有了一把能自己推演的尺子——遇到任何调度或内存问题，都能顺着"任务往哪走、数据往哪搬、谁在记账"这条线自己想明白。

---

## 参考文献

[1] Ray v2 Architecture（架构白皮书）: <https://docs.google.com/document/d/1tBw9A4j62ruI5omIJbMxly-la5w4q_TjyJgJL_jN2fI/preview>

[2] Moritz et al., *Ray: A Distributed Framework for Emerging AI Applications*, OSDI 2018: <https://www.usenix.org/conference/osdi18/presentation/moritz>

[3] Ray 官方与用户案例（生产环境采用）: <https://www.ray.io> ／ <https://www.anyscale.com/customers>
